--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Frontend Automation</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
+  <!-- bower:css -->
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+  <!-- endbower -->
   <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
@@ -72,6 +74,10 @@
       </p>
     </div>
   </div>
+  <!-- bower:js -->
+  <script src="../bower_components/jquery/dist/jquery.js"></script>
+  <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <!-- endbower -->
   <script src="app/main.js"></script>
 </body>
 </html>
