--- a/src/index.html
+++ b/src/index.html
@@ -73,11 +73,18 @@
         </dl>
       </p>
     </div>
+    <div class="jumbotron">
+      <h1>
+        This is the
+        <span class="label label-primary environment"></span>
+        environment.
+      </h1>
+    </div>
   </div>
   <!-- bower:js -->
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <!-- endbower -->
-  <script src="app/main.js"></script>
+  <script src="dist/main.js"></script>
 </body>
 </html>
